--- a/Mymyiu.html
+++ b/Mymyiu.html
@@ -7,13 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAPPY BIRTHDAY TO YOU © Copyright by lehuyy</title>
     <link rel="stylesheet" href="style.css">
-<style>
-
-</style>
 </head>
 <script>
     var i = 0;
-    var txt = '❤️❤️ PHAM THI MY MY ❤️❤️ ';
+    var txt = ' ❤️❤️ PHAM THI MY MY ❤️❤️';
     var speed = 100;
     function type1() {
     if(i < txt.length) {
@@ -21,9 +18,11 @@
         i++;
         setTimeout(type1, speed);
     }
-}
-</script>
-<body> 
+}</script>
+<body>
+  <audio controls autoplay loop >
+    <source src="HappyBirthdayToYou.mp3">
+</audio>
   <style>
     body {
       background-image: url('images/nen1.jpg');
@@ -32,9 +31,8 @@
       background-size: 100% 100%;
     }
   </style>
-  <audio controls autoplay loop>
-    <source src="HappyBirthdayToYou.mp3" width="620" height="382" frameborder="0" allowfullscreen allow="autoplay"></iframe>">
-</audio>
+   
+    
     <div class="birthday">
         <div class="birthday_inner">
           <div class="birthday_inner__modal">
